cmake_minimum_required(VERSION 3.10)
project(logging_app)
find_package(PkgConfig)
pkg_check_modules(DLT REQUIRED automotive-dlt)
link_directories(${DLT_LIBRARY_DIRS})
set(SOURCE_EXE main.cpp)
add_executable(main ${SOURCE_EXE})
target_include_directories(main PUBLIC compression_library)
target_link_libraries(main ${DLT_LIBRARIES} compressionLib)